# fastapi-boilerplate

./: .env  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  README.md  main.py  pyproject.toml
app/: __init__.py  app.py
config/: __init__.py  app_config.py
